# IceFactory

./: .gitignore  CMakeLists.txt  IceFactory  README.md  compile.txt  init  init_linux.sh
Engine/: ControlDefine.hpp  HideIceFactory.hpp  IceFactory.cpp  IceFactory.hpp  IceFactoryInit.cpp  todo
Engine/Base/: Base.cpp  Base.hpp  BaseInterface.hpp  BaseInterface.tpp
Engine/Bilbord/: Bilbord.hpp
Engine/Camera/: Base2DCamera.cpp  Base2DCamera.hpp  BaseCamera.cpp  BaseCamera.hpp  Camera.cpp  Camera.hpp  FpsCamera.cpp  FpsCamera.hpp
Engine/Draw2D/: DrawTextBox.hpp  DrawTexture.cpp  DrawTexture.hpp  DrawTexture2D.cpp  DrawTexture2D.hpp
Engine/Groups/: BaseGroups.hpp  BeseGroups.cpp  Groups.hpp  Groups.tpp
Engine/Import/: IImport.hpp
Engine/Import/Audio/: AudioManager.cpp  AudioManager.hpp
Engine/Import/Model/: ModelManager.cpp  ModelManager.hpp
Engine/Import/Texture2D/: Texture2DManager.cpp  Texture2DManager.hpp
Engine/Object/: DevCube.cpp  DevCube.hpp  MeshObject.cpp  MeshObject.hpp  Object.cpp  Object.hpp  Object2D.cpp  Object2D.hpp  Object3D.cpp  Object3D.hpp
Engine/Render/: Render.cpp  Render.hpp
Engine/Resource/Models/: Axis_Cube.m3d  cube.glb  what.glb
Engine/Room/: Room.cpp  Room.hpp
Engine/Type/: Controls.hpp  Debug.h  KeysName.hpp  LocalType.hpp  RenderType.hpp  Type.hpp
Engine/Ui/: Console.hpp  Ui.cpp  Ui.hpp  UiBaseBlock.cpp  UiBaseBlock.hpp  UiBaseTextBox.cpp  UiBaseTextBox.hpp  UiRenderZone.cpp  UiRenderZone.hpp
Engine/include/raygui/projects/CMake/: CMakeCache.txt  Makefile  cmake_install.cmake
Engine/include/raygui/src/: raygui.h
Game/: main.cpp
linux/: Makefile  buildMakefile.sh  makeBear.sh  makeFileWindows
linux/test/: Makefile
projects/: buildMakefile.sh
windows/: Makefile  README.txt
windows/testtAlix/: Makefile  main.cpp
